[tool.poetry]
name = "solaris_exporter"
version = "0.1.0"
description = ""
authors = ["Gureev Sergej <s.gureev@cft.ru>"]

[tool.poetry.scripts]
solaris-exporter = "solaris_exporter.main:main"

[tool.poetry.dependencies]
python = "^3.10"
prometheus-client = "^0.14.1"
psutil = "^5.9.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
Nuitka = "^0.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
