[tool.poetry]
name = "solaris_exporter"
version = "0.2"
description = "Prometheus exporter for Solaris/SunOS operation systems"
authors = ["Alexander Golikov <n27051538@gmail.com>"]

[tool.poetry.dependencies]
python = "^2.7"
prometheus-client = "0.12.0"
psutil = "^5.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
